<resources>
    <string name="app_name" translatable="false">Don\'t Say It</string>
    <string name="how_to_play_txt">how to play</string>
    <string name="start_in_game">Play</string>
    <string name="title_log_in">Log in</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="join_lobby_btn">Join Lobby</string>
    <string name="create_lobby_btn">Create Lobby</string>
    <string name="title_sign_up">sign up</string>
    <string name="username">username</string>
    <string name="title_settings">Settings</string>
    <string name="sign_out_textview">Sign Out</string>
    <string name="contentDescription_share">share</string>
    <string name="arabic" translatable="false">العربيه</string>
    <string name="english" translatable="false">English</string>
    <string name="dark_theme_tv">Theme</string>
    <string name="contentDescription_edit_username">edit username</string>
    <string name="contentDescription_players_list">players list</string>
    <string name="contentDescription_face_blinking_animation">profile picture</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="how_to_play">how to play</string>
    <string name="players">players number</string>
    <string name="lobby_keyword">Lobby keyword</string>
    <string name="game_details_dialog_header">Game Details</string>
    <string name="write_us_a_suggestion">Write us a Suggestion</string>
    <string name="edit_text_suggestion">suggestion</string>
    <string name="suggest_btn_send">Send</string>
    <string name="language">Language</string>
    <string name="notenough">not enough players to start the game</string>
    <string name="round">Round</string>
    <string name="Won">Won!</string>
    <string name="nextround">better luck next round!</string>
    <string name="hostleft">Host closed the lobby</string>
    <string name="chosephoto">choose a profile picture</string>
    <string name="roomcodetaken">Lobby code is taken choose another code</string>
    <string name="nolobby">Lobby doesn\'t exists</string>
    <string name="fulllobby">this lobby is full</string>
    <string name="failed">failed to change</string>
    <string name="noconnection">No Internet Connect</string>
    <string name="required">Required</string>
    <string name="Invalid">Invalid</string>
    <string name="tooshort">Too short, Needs at least 6 characters</string>
    <string name="oneupper">Need at least one upper case letter</string>
    <string name="onelower">Need at least one lower case letter</string>
    <string name="toolong">Too long. Max 10 characters</string>
    <string name="game_code">Game Code</string>
    <string name="how_to_play_title">How to Play</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="user_information">User Information</string>
    <string name="appearance">Appearance</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="score">Score</string>
    <string name="winner">Winner</string>


</resources>