<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:id="@+id/settingsLayout"
    tools:context=".ui.main.SettingsFragment">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:text="@string/title_settings"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgprofile"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_margin="70dp"
        android:background="@drawable/circle_shape"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:layout_marginBottom="5dp"
        android:id="@+id/imgbtnprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_edit"
        app:layout_constraintTop_toBottomOf="@+id/imgprofile"
        app:layout_constraintEnd_toEndOf="@+id/imgprofile"
        app:layout_constraintStart_toStartOf="@+id/imgprofile" />


    <RelativeLayout
        android:id="@+id/usernameRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@+id/imgprofile">

    <!--    <EditText
            android:id="@+id/etUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="none" />-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernamelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10sp"
            app:boxBackgroundColor="@color/white"
            app:counterMaxLength="6"
            android:backgroundTint="#99ffffff"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:backgroundTint="#99ffffff"
                android:inputType="textPersonName"
                android:hint="@string/username"
                android:textSize="20sp"
                android:layout_marginEnd="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.textfield.TextInputLayout>



        <ImageButton
            android:id="@+id/btnEditUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_edit"
            android:contentDescription="@string/contentDescription_edit_username" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingStart="20dp"
        android:paddingVertical="10dp"
        android:text="@string/email"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/usernameRelative" />

    <TextView
        android:id="@+id/tvSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/sign_out_textview"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <RelativeLayout
        android:id="@+id/themeRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/langRelative"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/dark_theme_tv"
            android:textSize="20sp" />
<com.google.android.material.button.MaterialButtonToggleGroup
    android:id="@+id/switchTheme"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_centerVertical="true"
    app:singleSelection="true"
    android:padding="5dp"
    android:layout_marginEnd="20dp">
    <com.google.android.material.button.MaterialButton
    android:id="@+id/toggleDark"
        android:text="Dark"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/toggleLight"
        android:text="Light"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</com.google.android.material.button.MaterialButtonToggleGroup>
        <!--  <androidx.appcompat.widget.SwitchCompat
              android:id="@+id/switchTheme"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentEnd="true"
              android:layout_centerVertical="true"
              android:layout_marginEnd="20dp" />-->
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/langRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/language"
            android:textSize="20sp" />
        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/switchLang"
            android:layout_width="wrap_content"
            app:singleSelection="true"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/engLang"
                android:text="@string/english"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/arLang"
                android:text="@string/arabic"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </com.google.android.material.button.MaterialButtonToggleGroup>
      <!--  <TextView
            android:id="@+id/engLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:text="@string/english"
            android:textSize="18sp" />-->

        <!--<TextView
            android:id="@+id/arLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/engLang"
            android:layout_centerVertical="true"
            android:layout_marginEnd="80dp"
            android:text="@string/arabic"
            android:textSize="18sp" />-->
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>