<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/colorOnPrimary"
    tools:viewBindingIgnore="true">

    <TextView
        android:id="@+id/dialogHeader"
        style="@style/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/game_details_dialog_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="60dp"
        android:background="#959393"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/tajawal_medium"
        android:text="@string/players"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@id/view1" />

    <TextView
        android:id="@+id/tvcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/tajawal_medium"
        android:text="@string/game_code"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1" />

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/btnJoin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@id/tvPlayers">

        <NumberPicker
            android:id="@+id/numberPicker"
            android:layout_width="60dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative2"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/btnJoin"
        app:layout_constraintEnd_toStartOf="@id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvcode">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/keywordlayout"
            style="@style/OutlinedRoundedBox"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/keyword"
                style="@style/text18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/lobby_keyword"
                android:textAlignment="center" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/keywordlayout"
            android:layout_centerHorizontal="true">

            <ImageButton
                android:id="@+id/imgBtnShare"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/share_sec"
                android:contentDescription="@string/contentDescription_share" />

            <ImageButton
                android:id="@+id/btnCopy"
                android:layout_width="25dp"
                android:layout_height="30dp"

                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/copy" />
        </LinearLayout>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/btnJoin"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_green_nobg"
        android:text="@string/create_lobby_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/constBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_lobby_btn"
        app:layout_constraintBottom_toBottomOf="@+id/btnJoin"
        app:layout_constraintEnd_toEndOf="@+id/btnJoin"
        app:layout_constraintStart_toStartOf="@+id/btnJoin"
        app:layout_constraintTop_toTopOf="@+id/btnJoin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintGuide_percent="0.63" />

</androidx.constraintlayout.widget.ConstraintLayout>