<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/colorOnPrimary"
    tools:viewBindingIgnore="true">

    <TextView
        android:id="@+id/dialogHeader"
        style="@style/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/game_details_dialog_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="60dp"
        android:background="#959393"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/btnJoin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/keywordlayout"
            style="@style/OutlinedRoundedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="70dp"
            android:hint="@string/lobby_keyword"
            app:layout_constraintEnd_toStartOf="@+id/btnPaste"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/keyword"
                style="@style/text18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/btnPaste"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:background="@drawable/paste"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/keywordlayout"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/btnJoin"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_green_nobg"
        android:text="@string/create_lobby_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/constBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_lobby_btn"
        app:layout_constraintBottom_toBottomOf="@+id/btnJoin"
        app:layout_constraintEnd_toEndOf="@+id/btnJoin"
        app:layout_constraintStart_toStartOf="@+id/btnJoin"
        app:layout_constraintTop_toTopOf="@+id/btnJoin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83094555" />

</androidx.constraintlayout.widget.ConstraintLayout>